SISEC grant / login intent. Mockup. Things still need to be done for approaching real situation.
